--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
 
           <div id="clipboard" class="columns is-mobile" style="display: none;">
-            <div id="about" class="column box is-10 is-offset-1">
+            <div id="history-table" class="column box is-10 is-offset-1">
               <table class="table is-hoverable">
                 <tbody>
                   <tr>
